<resources>
    <string name="app_name">MusicApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="favourite">Favourite</string>
    <string name="album">Album</string>
    <string name="play_list">Play list</string>
    <string name="image_music">image_music</string>
    <string name="title_music">Title Music</string>
    <string name="artist_music">Artist Music</string>
    <string name="imagePlaySong">TODO</string>
    <string name="add_album">Add Album</string>
    <string name="album_play">TODO</string>
    <string name="favorite">TODO</string>
    <string name="add_favorite">TODO</string>
    <string name="previous">TODO</string>
    <string name="ispPay">TODO</string>
    <string name="next">TODO</string>
    <string name="title_song_home">Title song</string>
    <string name="artist_song_home">Artist song</string>
    <string name="favorites_list">Favorites list</string>
    <string name="create_albums">Create Albums</string>
    <string name="name_album">Name album</string>
    <string name="ok">Ok</string>
    <string name="image_album">TODO</string>
    <string name="title_album">title_album</string>
    <string name="new_a_album">New a album</string>
    <string name="img_menu">TODO</string>
    <string name="name_bottom_album">Name album</string>
    <string name="add_bottom_album">TODO</string>
    <string name="img_avt_bottom">TODO</string>
    <string name="name_album_song_in_album">Name album</string>
    <string name="name_song">Name_Song</string>
    <string name="hh_music">HHMusic</string>
    <string name="all">All</string>
    <string name="recently">Recently</string>
    <string name="number_playlist">Number Playlist</string>
    <string name="title">Title</string>
    <string name="number_played_song">Number played song</string>
    <string name="more">More</string>
    <string name="action_image">action_image</string>
    <string name="shuffle">Shuffle</string>
    <string name="play">Play</string>
    <string name="recent_songs">Recent song</string>
    <string name="press_again_to_exit">Press again to exit</string>
    <string name="_0">0</string>
    <string name="my_top_tracks">My Top Tracks</string>
    <string name="recently_played">Recently Played</string>
    <string name="recently_added">Recently Added</string>
    <string name="next_play">Next play</string>
    <string name="add_to_the_list">Add to the list</string>
    <string name="add_to_the_playlist">Add to the playlist</string>
    <string name="remove_from_the_device">Remove from the device</string>
</resources>