<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/liner_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.HomeActivity">



    <fragment
        android:id="@+id/fragment"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/bottomNavigationView"
        app:navGraph="@navigation/navigation_music" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        app:menu="@menu/menu_music" />

    <RelativeLayout
        android:id="@+id/relativeLayout_action_home"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_above="@id/bottomNavigationView"
        android:layout_alignBottom="@id/fragment"
        android:background="@color/design_default_color_primary"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@id/img_previous_home"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_title_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:ellipsize="marquee"
                android:textColor="@color/black"
                android:marqueeRepeatLimit="marquee_forever"
                android:scrollHorizontally="true"
                android:singleLine="true"
                android:text="@string/title_song_home"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/tv_artist_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:text="@string/artist_song_home"
                android:textSize="12sp" />
        </LinearLayout>

        <ImageButton
            android:id="@+id/img_previous_home"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:layout_toStartOf="@id/img_pause_hone"
            android:background="@drawable/bcr_view"
            android:contentDescription="@string/previous"
            android:src="@drawable/ic_previous"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/black" />

        <ImageButton
            android:id="@+id/img_pause_hone"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:layout_toStartOf="@id/img_next_home"
            android:background="@drawable/bcr_view"
            android:contentDescription="@string/ispPay"
            android:src="@drawable/ic_pause"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/black" />

        <ImageButton
            android:id="@+id/img_next_home"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="15dp"
            android:background="@drawable/bcr_view"
            android:contentDescription="@string/next"
            android:src="@drawable/ic_next"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/black" />
    </RelativeLayout>
</RelativeLayout>