<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".activity.PlayMusicActivity">

    <!-- TODO: Update blank fragment layout -->

    <ImageView
        android:id="@+id/img_playSong"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/imagePlaySong"
        android:padding="20dp"
        android:scaleType="centerCrop" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="30dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_titlePlay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_artistPlay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <SeekBar
            android:id="@+id/seekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@id/tv_duration_end"
            android:layout_toEndOf="@id/tv_duration_start"
            android:max="100"
            android:padding="8dp"
            android:progress="0" />

        <TextView
            android:id="@+id/tv_duration_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerInParent="true"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_duration_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:textSize="15sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="30dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/img_favorite_play"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/bcr_view"
                android:contentDescription="@string/add_favorite"
                android:src="@drawable/ic_favorite"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/img_previous_play"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/img_previous_play"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/bcr_view"
                android:contentDescription="@string/previous"
                android:src="@drawable/ic_previous"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/img_pause_play"
                app:layout_constraintStart_toEndOf="@id/img_favorite_play"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/img_pause_play"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:background="@drawable/bcr_view"
                android:contentDescription="@string/ispPay"
                android:src="@drawable/ic_pause"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/img_next_play"
                app:layout_constraintStart_toEndOf="@id/img_previous_play"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/img_next_play"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/bcr_view"
                android:contentDescription="@string/next"
                android:src="@drawable/ic_next"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/imgBt_album"
                app:layout_constraintStart_toEndOf="@id/img_pause_play"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/imgBt_album"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/bcr_view"
                android:contentDescription="@string/add_album"
                android:src="@drawable/ic_add_album"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/img_next_play"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>


</LinearLayout>