<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.ui.fragment.SongFragment">


    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshLayout_song"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout_song"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:scrollbars="vertical">

                <LinearLayout
                    android:id="@+id/linearLayout_play"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:baselineAligned="false"
                    android:orientation="horizontal"
                    app:layout_constraintDimensionRatio="1:0.16"
                    app:layout_constraintTop_toTopOf="parent">
                    <androidx.cardview.widget.CardView
                        android:layout_marginEnd="20dp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:cardCornerRadius="16dp"
                        android:backgroundTint="@android:color/transparent"
                        android:layout_weight="1">
                        <FrameLayout
                            android:layout_width="match_parent"
                            android:id="@+id/frameLayout_shuffle"
                            android:background="@drawable/bcr_click_action"
                            android:layout_height="match_parent"/>
                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="?android:attr/selectableItemBackground"
                            android:gravity="center">

                            <ImageView
                                android:id="@+id/img_shuffle"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:contentDescription="@string/action_image"
                                android:src="@drawable/ic_shuffle"
                                app:tint="@color/white" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_gravity="end"
                                android:textStyle="bold"
                                android:fontFamily="@font/roboto_light"
                                android:layout_marginStart="10dp"
                                android:layout_toEndOf="@id/img_shuffle"
                                android:gravity="center"
                                android:text="@string/shuffle"
                                android:textColor="@color/white" />
                        </RelativeLayout>
                    </androidx.cardview.widget.CardView>


                    <androidx.cardview.widget.CardView
                        android:layout_marginStart="20dp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:cardCornerRadius="16dp"
                        android:backgroundTint="@android:color/transparent"
                        android:layout_weight="1">
                        <FrameLayout
                            android:layout_width="match_parent"
                            android:id="@+id/frameLayout_play_music"
                            android:background="@drawable/bcr_click_action"
                            android:layout_height="match_parent"/>
                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="?android:attr/selectableItemBackground"
                            android:gravity="center">

                            <ImageView
                                android:id="@+id/img_play"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:contentDescription="@string/action_image"
                                android:src="@drawable/ic_resume"
                                app:tint="@color/white" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_gravity="end"
                                android:fontFamily="@font/roboto_light"
                                android:layout_marginStart="10dp"
                                android:layout_toEndOf="@id/img_play"
                                android:gravity="center"
                                android:textStyle="bold"
                                android:text="@string/play"
                                android:textColor="@color/white" />
                        </RelativeLayout>

                    </androidx.cardview.widget.CardView>


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout_resume"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="20dp"
                    android:baselineAligned="false"
                    android:orientation="horizontal"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    app:layout_constraintDimensionRatio="1:0.16"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout_play">

                    <androidx.cardview.widget.CardView
                        android:layout_marginEnd="20dp"
                        android:layout_width="match_parent"
                        android:backgroundTint="@android:color/transparent"
                        android:layout_height="match_parent"
                        app:cardCornerRadius="16dp"
                        android:layout_weight="1">
                    <FrameLayout
                        android:layout_width="match_parent"
                        android:background="@drawable/bcr_click_action"
                        android:id="@+id/frameLayout_recent_song"
                        android:layout_height="match_parent"/>
                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="?android:attr/selectableItemBackground"
                            android:gravity="center">

                            <ImageView
                                android:id="@+id/img_resume_song"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:contentDescription="@string/action_image"
                                android:src="@drawable/ic_resume_song"
                                app:tint="@color/white" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_gravity="end"
                                android:textStyle="bold"
                                android:fontFamily="@font/roboto_light"
                                android:layout_marginStart="10dp"
                                android:layout_toEndOf="@id/img_resume_song"
                                android:gravity="center"
                                android:text="@string/recent_songs"
                                android:textColor="@color/white" />
                        </RelativeLayout>
                    </androidx.cardview.widget.CardView>
                    <androidx.cardview.widget.CardView
                        android:layout_marginStart="20dp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:cardCornerRadius="16dp"
                        android:backgroundTint="@android:color/transparent"
                        android:layout_weight="1">
                    <FrameLayout
                        android:layout_width="match_parent"
                        android:background="@drawable/bcr_click_action"
                        android:layout_height="match_parent"/>
                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="?android:attr/selectableItemBackground"
                            android:gravity="center">

                            <ImageView
                                android:id="@+id/img_popular_songs"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:contentDescription="@string/action_image"
                                android:src="@drawable/ic_play_mutable"
                                app:tint="@color/white" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_gravity="end"
                                android:textStyle="bold"
                                android:fontFamily="@font/roboto_light"
                                android:layout_marginStart="10dp"
                                android:layout_toEndOf="@id/img_popular_songs"
                                android:gravity="center"
                                android:text="@string/recent_songs"
                                android:textColor="@color/white" />
                        </RelativeLayout>

                    </androidx.cardview.widget.CardView>
                </LinearLayout>
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_home"
                    tools:listitem="@layout/item_song"
                    android:layout_marginStart="20dp"
                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                    app:spanCount="2"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="20dp"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout_resume" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</LinearLayout>